crates/pv-release/tests/snapshots/manifest_generation__manifest_generator_rejects_multi_track_resource_without_default_metadata.snap
---
source: crates/pv-release/tests/manifest_generation.rs
expression: error
---
GeneratedManifestInvalid {
    reason: "resource `redis` has multiple tracks (`7.2, 8.0`) but no explicit default_track metadata",
}
