crates/pv-release/tests/snapshots/manifest_generation__manifest_generator_rejects_revocation_for_missing_artifact.snap
---
source: crates/pv-release/tests/manifest_generation.rs
expression: error
---
RevocationTargetMissing {
    revocation: "redis:7.2:7.2.5-pv1:darwin-arm64",
    identity: "redis:7.2:7.2.5-pv1:darwin-arm64",
}
